<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GoodsMent</string>
    //Headings
    <string name="heading_0ne">Choose your Destination</string>
    <string name="heading_two">Fast Delivery</string>
    <string name="heading_Three">Quick &amp; Easy Payments</string>

    //Descripition
    <string name="desc_one">nfjvjdvjdbehvbhvhebheb</string>
    <string name="desc_two">njdbchdbchbchdbhbvcjbvjdbvjdb</string>
    <string name="desc_three">Grow your Business by Accepting card payments with The New Card Reader</string>
    <string name="goodsment">GoodsMent</string>
    <string name="create_your_account">Create your Account</string>
    <string name="name">name</string>


    <string name="facebook_app_id">689911759265461</string>
    <!--    <string name="fb_login_protocol_scheme">fb1234</string>-->
    <string name="facebook_client_token">#56789</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="email">email</string>
    <string name="contact_number">contact number</string>
    <string name="city">city</string>
    <string name="password">password</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="signin">signin</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">sign in</string>
    <string name="or_sign_in_with">- Or sign in with -</string>
    <string name="todo">TODO</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="start">Start</string>
    <string name="close">Close</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="googleApi">AIzaSyB1MpR_z_aGwXTyhzt8ve2lCl1-a7DfQ_E</string>
    <string name="more">More</string>
    <string name="setup_profile">Setup Profile</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Contact_number">Contact Number</string>
    <string name="update">UpDate</string>
    <string name="save">save</string>
    <string name="update_profile">Update Profile</string>
    <string name="enter_email">enter email</string>
    <string name="enter_password">enter password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="please_enter_your_e_mail_adreess_to_recive_link_on_email">Please Enter Your E-Mail Adreess To Recive Link On Email.</string>
    <string name="mobile_number">Mobile Number :</string>
    <string name="_123_456_7890">123-456-7890</string>
    <string name="address">Address :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number">Number</string>
    <string name="google_maps_api">google_maps_api</string>
    <string name="title_activity_map">MapActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_driver_map">DriverMapActivity</string>
    <string name="item1">item1</string>
    <string name="enter_origin_address">Enter origin address</string>
    <string name="enter_source_location">Enter Source Location</string>
    <string name="enter_destination_location">Enter Destination Location</string>
    <string name="total_charges_00">Total Charges : 00</string>
    <string name="checkout">Checkout</string>
    <string name="_2_wheeler">2 Wheeler</string>
    <string name="charges">Charges : 00</string>
    <string name="enter_name">enter name</string>
    <string name="confirm_location">Confirm Location</string>

    <!--    <string name="access_token">pk.eyJ1Ijoic2hpdmFsaTEyIiwiYSI6ImNsZjc3c2l2cTFkOXQzc28xM2dmMHMwZW4ifQ.CWwS6O0hvO5EJEUlmsZf3A </string>-->
    <!--    <string name="start_navigation">Start Navigation</string>-->
    <!--    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>-->
    <!--    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>-->


</resources>