<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".owner_login">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:background="@drawable/topbackground"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="150dp"
            android:text="@string/goodsment"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/signincard"
            android:layout_width="match_parent"
            android:layout_height="800dp"
            android:layout_marginTop="50dp"
            app:cardElevation="20dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:ignore="MissingConstraints">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="60dp"
                    android:fontFamily="@font/adamina"
                    android:text="@string/login_to_your_account"
                    android:textColor='@color/black'
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtinputemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="30dp"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxBackgroundColor="#E5E9EF"
                    app:boxBackgroundMode="outline"
                    android:hint="@string/enter_email"
                    app:startIconDrawable="@drawable/ic_baseline_email_24"
                    app:boxStrokeColor="@color/blue"
                    app:hintTextColor="@color/blue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/adamina"
                        android:inputType="textEmailAddress"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtinputpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="30dp"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxBackgroundColor="#E5E9EF"
                    app:boxBackgroundMode="outline"
                    android:hint="@string/enter_password"
                    app:startIconDrawable="@drawable/security"
                    app:boxStrokeColor="@color/blue"
                    app:hintTextColor="@color/blue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/adamina"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/txtForgotpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="240dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/adamina"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtinputpass" />

                <Button
                    android:id="@+id/btnSignin"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="105dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="105dp"
                    android:background="@drawable/input_bg"
                    style="@style/ButtonStyle"
                    android:padding="10dp"
                    android:text="@string/signin"
                    android:fontFamily="@font/adamina"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtforgetpassword"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="80dp"
                        android:layout_marginEnd="150dp"
                        android:fontFamily="@font/adamina"
                        android:text="Don't Have an Account?"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/txtSingup"
                        android:layout_width="64dp"
                        android:layout_height="25dp"
                        android:layout_marginEnd="65dp"
                        android:text="signup"
                        android:textColor="@color/blue"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.609"
                        app:layout_constraintStart_toEndOf="@+id/textView3"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>